# ClientServer

./: CMakeLists.txt  competitors_1.txt  competitors_2.txt  competitors_3.txt  competitors_4.txt  data_generator.py  performance_analyser.py  run.sh
src/: client.cpp  client.hpp  client_main.cpp  server.cpp  server.hpp  server_main.cpp
